# clip-as-service-starter

./: .gitignore  README.md  client.ipynb  pyproject.toml  sentence-transformers.ipynb
