[tool.poetry]
name = "clip-as-service-starter"
version = "0.1.0"
description = ""
authors = ["FooQoo"]

[tool.poetry.dependencies]
python = "^3.9"
clip-server = "^0.5.1"
clip-client = "^0.5.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
